syntax = "proto3";

package guru.qa.country;

option java_multiple_files = true;
option java_package = "guru.qa.country";
option java_outer_classname = "CountryProto";

service CountryService {
  rpc CountryByName(CountryName) returns (CountryResponse) {}
  rpc AddCountries(ListCountries) returns (stream CountryResponse) {}
}

message Ids {
  int32 count = 1;
}

message CountryName {
  string name = 1;
}

message CountryRequest {
  string name = 1;
  string code = 2;
}

message ListCountries {
  repeated CountryRequest countryRequest = 1;
}

message CountryResponse {
  string name = 1;
  string code = 2;
}